--- a/Part1/index.html
+++ b/Part1/index.html
@@ -29,10 +29,12 @@
         <td id="7" onclick="play(7)"></td>
         <td id="8" onclick="play(8)"></td>
       </tr>
+      <tr></tr>
     </table>
     <span>Player </span>
     <span id="player">X</span>
     <span>'s turn</span>
+    <button id="reset" onclick="reset()">Reset</button>
   </main>
 
   <script src = './index.js'></script>
